@@ -258,9 +258,10 @@ if ($msg =~ /</) {
 print "$msg\n";
 
 if ($ok) {
-	&$second_print($text{'setup_done'});
+	&$second_print($ok < 0 ? $text{'scripts_epartial'}
+			       : $text{'setup_done'});
 
-	if (!$sinfo) {
+	if (!$sinfo && $ok > 0) {
 		# Show username and password
 		if ($suser && $spass) {
 			print &text('scripts_userpass',
@@ -280,7 +281,8 @@ if ($ok) {
 		}
 	&add_domain_script($d, $sname, $ver, $opts, $desc, $url,
 			   $sinfo ? ( $sinfo->{'user'}, $sinfo->{'pass'} )
-				  : ( $suser, $spass ));
+				  : ( $suser, $spass ),
+			   $ok < 0 ? $msg : undef);
 
 	# Config web server for PHP
 	if (&indexof("php", @{$script->{'uses'}}) >= 0) {
