@@ -494,6 +494,7 @@ setup_scriptphpver=.. PHP version $1 required
 setup_scriptfetch=.. failed to fetch files : $1
 setup_scriptclash=.. script needs to create a database named $1, but it already exists
 setup_scriptdone=.. done. $1
+setup_scriptpartial=.. only partially complete : $1
 setup_scriptfailed=.. failed! $1
 setup_ednsview=DNS view $1 was not found
 
@@ -2721,6 +2722,7 @@ scripts_nonew=No scripts are available for this virtual server.
 scripts_nomatch=No scripts matched your search.
 scripts_iheader=Script install options
 scripts_iname=Script to install
+scripts_ipartial=Partial installation error
 scripts_idesc=Script description
 scripts_iuses=Programming language
 scripts_isite=Original website
@@ -2839,6 +2841,7 @@ scripts_unsupdesc=This form allows you to install a script version that has not 
 scripts_addover=Overriding proxying for path $1 ..
 scripts_delproxy=Removing proxying for path $1 ..
 scripts_proxyfailed=.. proxy setup failed : $1
+scripts_epartial=.. installation was only partially complete.
 
 newnotify_title=Email Server Owners
 newnotify_desc=This page can be used to send email to the owners of the selected virtual servers, for example to announce system down-time, upgrades or other service alterations. The following substitions can be used in the message body and subject:
