@@ -882,3 +882,4 @@ Users in domains with spam filtering enabled can have their auto-whitelists view
 Added the list-mailbox.pl command-line script, for dumping a user's mail.
 Added a script insaller for poMMo, a new web-based mailing list manager.
 Link from the Edit Database page to scripts that use the DB.
+When a script does not get fully installed (perhaps due to Virtualmin not being able to call it's setup wizard), it is marked as a partial failure rather than a complete failure. This allows it be easily remove without leaving files behind.
